correctly aligned the radio buttons

--- a/MatchScouting/src/App.css
+++ b/MatchScouting/src/App.css
@@ -297,40 +297,13 @@
   /* display: inline-block;
    text-align: left;
    list-style-type: none; */
-   display: flex;
-   border: none;
-	justify-content: flex-start;
+   display: inline-flex;
+	/* justify-content: flex-start;
 	margin:auto;
   text-align: center;
-  width: 34%;
+  width: 34%; */
  }
 
- .align-radio2 {
-  display: flex;
-  border: none;
- justify-content: flex-start;
- margin:auto;
- text-align: center;
- width: 38%;
- }
- 
- .align-radio3 {
-  display: flex;
-  border: none;
- justify-content: flex-start;
- margin:auto;
- text-align: center;
- width: 40%;
- }
-
- .align-radio4 {
-  display: flex;
-  border: none;
- justify-content: flex-start;
- margin:auto;
- text-align: center;
- width: 54%;
- }
 
  .submit-button {
    width: 500px;
